--- a/index.html
+++ b/index.html
@@ -35,11 +35,13 @@
     <h1>Self-Introduction</h1>
     <p>I am Lam Shu Yu, born in 1998, and I am currently studying in the third year of the Financial Technology of Hong Kong Polytechnic University.
 
-    Since I was 10, I have always liked studying computers . For example, when I was young, my family would lock the computer, and I would use different methods to crack the password. Many times I can use the computer smoothly.  I chose related subjects in the my high school.  In the process of learning, I have also been looking for other courses on the Internet, reading and learning courses related to computers and networks, such as artificial intelligence technology and so on.
+Since I was 10, I have always liked studying computers. For example, when I was young, my family would lock the computer, and I would use different methods to crack the password. Many times I can use the computer smoothly. When selecting subjects in high school, I also chose related subjects because I wanted to know more about the world of computers. In the process of learning, I have also been searching for different courses on the Internet, reading and learning courses related to computers and the Internet, such as artificial intelligence technology and so on.
 
-    In addition, I also work for Prudential Insurance Company. The main job is to communicate with customers, follow up, receive customers and process insurance policies, and help customers improve their financial management concepts, so that customers can have a more secure life.
+Besides, I also work for Prudential plc. My main job is to communicate with customers, follow up, receive customers, and process insurance policies to help customers improve their financial management concepts to have a more secure life.
 
-    I think my advantages are as follows: First, strong communication skills, able to deal with customers smoothly.</p>
+In terms of personal hobbies, I like taekwondo and basketball. I learned a lot from it, learned how to be polite and respect the old and caring for the child, learned to be patient, and stick to my bottom line.
+
+I think my advantages are as follows: First, strong communication skills, able to deal with customers smoothly. Second, he is good at teamwork and has a strong ability to withstand pressure.</p>
     <h2>Education</h2>
     <table>
     </table>
