--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <a class="btn btn-outline-dark nav-link" style="border:0;" href="#taekwondo">Taekwondo</a>
             </li>
             <li class="nav-item">
-              <a class="btn btn-outline-dark nav-link" style="border:0;" href="#Travel">Travel</a>
+              <a class="btn btn-outline-dark nav-link" style="border:0;" href="#travel">Travel</a>
             </li>
           </ul>
         </div>
