--- a/index.html
+++ b/index.html
@@ -352,15 +352,15 @@
         </div>
 
         <div class="carousel-item container-fluid">
-          <img class="travel-image" src="images/Travel/Japan_05.jpg" alt="Japan_05">
+          <img class="travel-image" src="images/Travel/Japan_05.JPG" alt="Japan_05">
         </div>
 
         <div class="carousel-item container-fluid">
-          <img class="travel-image" src="images/Travel/Japan_02.jpg" alt="Japan_02">
+          <img class="travel-image" src="images/Travel/Japan_02.JPG" alt="Japan_02">
         </div>
 
         <div class="carousel-item container-fluid">
-          <img class="travel-image" src="images/Travel/Japan_03.jpg" alt="Japan_03">
+          <img class="travel-image" src="images/Travel/Japan_03.JPG" alt="Japan_03">
         </div>
 
       </div>
