--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
         </div>
 
         <div class="carousel-item container-fluid">
-          <img class="travel-image" src="images/Travel/Japan_07.jpg" alt="Japan_07">
+          <img class="travel-image" src="images/Travel/Japan_07.JPG" alt="Japan_07">
         </div>
 
         <div class="carousel-item container-fluid">
